@@ -2,12 +2,11 @@ package it.polito.latazza.data;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+import java.text.SimpleDateFormat;
 import java.util.Date;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -17,38 +16,54 @@ import it.polito.latazza.exceptions.NotEnoughBalance;
 import it.polito.latazza.exceptions.NotEnoughCapsules;
 import it.polito.latazza.exceptions.DateException;
 
+/**
+ * This class includes:
+ * - Integration testing
+ * - Acceptance testing
+ * 
+ * Since the used technique for integration is incremental bottom up
+ * (i.e. unit tests have been done previously on units this class depends on),
+ * no stubs are used.
+ * 
+ * @author s267563
+ * @author s265682
+ * @author s265485 
+ * @author s261072
+ * 
+ */
 public class TestDataImpl {
-
 	DataInterface data;
+	int employeeId, beverageId;
 	
 	@BeforeEach
 	void setUp() throws Exception {
-		Locale.setDefault(Locale.US);
 		data = new DataImpl();
 		data.reset();
-	}
-
-	@AfterEach
-	void tearDown() throws Exception {
+		
+		/*
+		 * Initial environment:
+		 * - 1 employee: Mario Rossi, balance 1000
+		 * - 1 beverage: Coffee, 20 capsules per box, 5 euro per box
+		 * - Available capsules: 40 coffee
+		 * - Balance: 0
+		 * 
+		 * This is done here because many test cases need an employee, a beverage and/or some capsules.
+		 */
+		employeeId = data.createEmployee("Mario", "Rossi");
+		beverageId = data.createBeverage("Coffee", 20, 500);
+		data.rechargeAccount(employeeId, 1000);
+		data.buyBoxes(beverageId, 2);
 	}
 	
-	/*
-	 *****************
-	 *** Black box ***
-	 *****************
-	 */
 	
 	/*
-	 * 	method: getBeverageName 
+	 * Black box
 	 */
 	
 	@Test
 	public void testGetBeverageName1() {
 		try {
-			int beverageId = data.createBeverage("Coffee", 20, 500);
-			assertTrue(beverageId >= 0);
-			String beverageName = data.getBeverageName(beverageId);
-			assertEquals("Coffee", beverageName);
+			assertEquals("Coffee", data.getBeverageName(beverageId));
 		} catch (BeverageException e) {
 			fail();
 		}
@@ -60,7 +75,7 @@ public class TestDataImpl {
 			data.getBeverageName(10);
 			fail();
 		} catch (BeverageException e) {
-
+			assertTrue(true);
 		}
 	}	
 	
@@ -70,21 +85,14 @@ public class TestDataImpl {
 			data.getBeverageName(-10);
 			fail();
 		} catch (BeverageException e) {
-
+			assertTrue(true);
 		}
 	}	
-	
-	/*
-	 * 	method: getBeverageCapsulesPerBox
-	 */
 	
 	@Test
 	public void testGetBeverageCapsulesPerBox1() {
 		try {
-			int beverageId = data.createBeverage("Coffee", 20, 500);
-			assertTrue(beverageId >= 0);
-			int capsulesPerBox = data.getBeverageCapsulesPerBox(beverageId);
-			assertEquals(20, capsulesPerBox);
+			assertEquals(Integer.valueOf(20), data.getBeverageCapsulesPerBox(beverageId));
 		} catch (BeverageException e) {
 			fail();
 		}
@@ -96,7 +104,7 @@ public class TestDataImpl {
 			data.getBeverageCapsulesPerBox(10);
 			fail();
 		} catch (BeverageException e) {
-
+			assertTrue(true);
 		}
 	}	
 	
@@ -106,21 +114,16 @@ public class TestDataImpl {
 			data.getBeverageCapsulesPerBox(-10);
 			fail();
 		} catch (BeverageException e) {
-
+			assertTrue(true);
 		}
-	}	
-	
-	/*
-	 *  method: getBeverageCapsules
-	 */
+	}
 	
 	@Test
 	public void testGetBeverageCapsules1() {
 		try {
-			int beverageId = data.createBeverage("Coffee", 20, 500);
-			assertTrue(beverageId >= 0);
-			int capsules = data.getBeverageCapsules(beverageId);
-			assertEquals(0, capsules);
+			data.reset();
+			int idB = data.createBeverage("Coffee", 20, 500);
+			assertEquals(Integer.valueOf(0), data.getBeverageCapsules(idB));
 		} catch (BeverageException e) {
 			fail();
 		}
@@ -129,23 +132,8 @@ public class TestDataImpl {
 	@Test
 	public void testGetBeverageCapsules2() {
 		try {
-			int beverageId = data.createBeverage("Coffee", 20, 500);
-			assertTrue(beverageId >= 0);
-			
-			// create new employee and recharge his account
-			// to increase laTazza balance, allowing to buy new boxes
-			int id = data.createEmployee("Mario", "Rossi");
-			data.rechargeAccount(id, 10000);
-
-			// buy new boxes and check if capsule amount has been updated
-			data.buyBoxes(beverageId, 2);
-			int capsules = data.getBeverageCapsules(beverageId);
-			assertEquals(40, capsules);
+			assertEquals(Integer.valueOf(40), data.getBeverageCapsules(beverageId));
 		} catch (BeverageException e) {
-			fail();
-		} catch (NotEnoughBalance e) {
-			fail();
-		} catch (EmployeeException e) {
 			fail();
 		}
 	}
@@ -156,7 +144,7 @@ public class TestDataImpl {
 			data.getBeverageCapsules(10);
 			fail();
 		} catch (BeverageException e) {
-
+			assertTrue(true);
 		}
 	}	
 	
@@ -166,96 +154,45 @@ public class TestDataImpl {
 			data.getBeverageCapsules(-10);
 			fail();
 		} catch (BeverageException e) {
-
+			assertTrue(true);
 		}
 	}	
 	
-	/*
-	 * 	method: getBeveragesId 
-	 */
-	
 	@Test
 	public void testGetBeveragesId1() {
-		try {
-			int id = data.createBeverage("Coffee", 20, 500);
-			List<Integer> beverages = data.getBeveragesId();
-			assertTrue(beverages.size() == 1);
-			assertTrue(beverages.contains(id));
-		} catch (BeverageException e) {
-			fail();
-		}
+		List<Integer> beverages = data.getBeveragesId();
+		assertTrue(beverages.size() == 1);
+		assertTrue(beverages.contains(beverageId));
 	}	
 	
 	@Test
 	public void testGetBeveragesId2() {
+		data.reset();
 		List<Integer> beverages = data.getBeveragesId();
 		assertTrue(beverages.isEmpty());
 	}	
 	
 	@Test
-	// to obtain loop coverage 2+
-	public void testGetBeveragesId3() {
-		try {
-			int id1 = data.createBeverage("Coffee", 20, 500);
-			int id2 = data.createBeverage("Tea", 25, 400);
-			List<Integer> beverages = data.getBeveragesId();
-			assertTrue(beverages.size() == 2);
-			assertTrue(beverages.contains(id1));
-			assertTrue(beverages.contains(id2));
-		} catch (BeverageException e) {
-			fail();
-		}
-	}
-	
-	/*
-	 * 	method: getBeverages
-	 */
-	
-	@Test
 	public void testGetBeverages1() {
-		try {
-			int id = data.createBeverage("Coffee", 20, 500);
-			Map<Integer, String> beverages = data.getBeverages();
-			assertTrue(beverages.size() == 1);
-			assertNotNull(beverages.get(id));
-			assertTrue(beverages.get(id).equals("Coffee"));
-		} catch (BeverageException e) {
-			fail();
-		}
+		Map<Integer, String> beverages = data.getBeverages();
+		assertTrue(beverages.size() == 1);
+		assertNotNull(beverages.get(beverageId));
+		assertTrue(beverages.get(beverageId).equals("Coffee"));
 	}	
 	
 	@Test
 	public void testGetBeverages2() {
+		data.reset();
 		Map<Integer, String> beverages = data.getBeverages();
 		assertTrue(beverages.isEmpty());
 	}	
 	
 	@Test
-	// to obtain loop coverage 2+
-	public void testGetBeverages3() {
-		try {
-			int id1 = data.createBeverage("Coffee", 20, 500);
-			int id2 = data.createBeverage("Tea", 25, 400);
-			Map<Integer, String> beverages = data.getBeverages();
-			assertTrue(beverages.size() == 2);
-			assertNotNull(beverages.get(id1));
-			assertNotNull(beverages.get(id2));
-			assertTrue(beverages.get(id1).equals("Coffee"));
-			assertTrue(beverages.get(id2).equals("Tea"));
-		} catch (BeverageException e) {
-			fail();
-		}
-	}
-	
-	/*
-	 * 	method: getEmployeeBalance
-	 */
-	
-	@Test
 	public void testGetEmployeeBalance1() {
 		try {
-			int employeeId = data.createEmployee("Mario", "Rossi");
-			int balance = data.getEmployeeBalance(employeeId);
+			data.reset();
+			int idE = data.createEmployee("Mario", "Rossi");
+			int balance = data.getEmployeeBalance(idE);
 			assertEquals(0, balance);
 		} catch (EmployeeException e) {
 			fail();
@@ -265,22 +202,21 @@ public class TestDataImpl {
 	@Test
 	public void testGetEmployeeBalance2() {
 		try {
-			int employeeId = data.createEmployee("Mario", "Rossi");
+			assertEquals(Integer.valueOf(1000), data.getEmployeeBalance(employeeId));
 			data.rechargeAccount(employeeId, 500);
-			int balance = data.getEmployeeBalance(employeeId);
-			assertEquals(500, balance);
+			assertEquals(Integer.valueOf(1500), data.getEmployeeBalance(employeeId));
 		} catch (EmployeeException e) {
 			fail();
 		}
-	}	
+	}
 	
 	@Test
 	public void testGetEmployeeBalance3() {
 		try {
-			data.getEmployeeBalance(-10);
+			data.getEmployeeBalance(10);
 			fail();
 		} catch (EmployeeException e) {
-			
+			assertTrue(true);
 		}
 	}	
 	
@@ -290,19 +226,14 @@ public class TestDataImpl {
 			data.getEmployeeBalance(-10);
 			fail();
 		} catch (EmployeeException e) {
-			
+			assertTrue(true);
 		}
 	}	
-	
-	/*
-	 * 	method: getEmployeeName
-	 */
 	
 	@Test
 	public void testGetEmployeeName1() {
 		try {
-			int id = data.createEmployee("Mario", "Rossi");
-			assertEquals(data.getEmployeeName(id), "Mario");
+			assertEquals("Mario", data.getEmployeeName(employeeId));
 		}
 		catch (EmployeeException e) {
 			fail();
@@ -316,18 +247,14 @@ public class TestDataImpl {
 			fail();
 		}
 		catch (EmployeeException e) {
+			assertTrue(true);
 		}
 	}
-	
-	/*
-	 * 	method: getEmployeeSurname
-	 */
 	
 	@Test
 	public void testGetEmployeeSurname1() {
 		try {
-			int id = data.createEmployee("Mario", "Rossi");
-			assertEquals("Rossi", data.getEmployeeSurname(id));
+			assertEquals("Rossi", data.getEmployeeSurname(employeeId));
 		}
 		catch (EmployeeException e) {
 			fail();
@@ -341,26 +268,24 @@ public class TestDataImpl {
 			fail();
 		}
 		catch (EmployeeException e) {
+			assertTrue(true);
 		}
 	}
 	
-	/*
-	 * 	method: getReport
-	 */
-	
 	@Test
 	public void testGetReport1() {
+		data.reset();
 		try {
-			Date d = new Date(); 
+			Date d = new Date();
 			assertEquals(0, data.getReport(d, new Date()).size());
 			
-			int id = data.createEmployee("Mario", "Rossi");
-			data.rechargeAccount(id, 10000);
+			employeeId = data.createEmployee("Mario", "Rossi");
+			data.rechargeAccount(employeeId, 10000);
 			List<String> l = data.getReport(d, new Date());
 			assertEquals(1, l.size());
 			String s = (String) l.get(0);
-			assertEquals(" RECHARGE Mario Rossi 100.00€", s.substring(19, s.length()));  
-			
+			assertEquals(" RECHARGE Mario Rossi " + String.format("%.2f", 100.0) + "€", s.substring(19, s.length()));  
+
 			int b = data.createBeverage("tea", 10, 1);
 			data.buyBoxes(b, 1);
 			assertEquals(2, data.getReport(d, new Date()).size());
@@ -378,6 +303,7 @@ public class TestDataImpl {
 			data.getReport( new Date(new Date().getTime() + (1000 * 60 * 60 * 48)), new Date());
 			fail();
 		} catch (DateException e) {
+			assertTrue(true);
 		}
 	}
 	
@@ -387,31 +313,29 @@ public class TestDataImpl {
 			data.getReport( null, new Date());
 			fail();
 		} catch (DateException e) {
+			assertTrue(true);
 		}
 	}
 	
-	/*
-	 * 	method: getEmployeeReport
-	 */
-	
 	@Test
 	public void testGetEmployeeReport1() {
+		data.reset();
 		try {
 			Date d = new Date();
-			int id = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(0, data.getEmployeeReport(id, d, new Date()).size());
+			employeeId = data.createEmployee("Mario", "Rossi");
+			assertEquals(0, data.getEmployeeReport(employeeId, d, new Date()).size());
 
-			data.rechargeAccount(id, 10000);
-			List<String> l = data.getEmployeeReport(id, d, new Date());
+			data.rechargeAccount(employeeId, 10000);
+			List<String> l = data.getEmployeeReport(employeeId, d, new Date());
 			assertEquals(1, l.size());
 			String s = (String) l.get(0);
-			assertEquals(" RECHARGE Mario Rossi 100.00€", s.substring(19, s.length()));  
-			
+			assertEquals(" RECHARGE Mario Rossi " + String.format("%.2f", 100.0) + "€", s.substring(19, s.length()));  
+
 			int b = data.createBeverage("tea", 10, 1);
 			data.buyBoxes(b, 1);
-			data.sellCapsules(id, b, 10, true);
-			assertEquals(data.getEmployeeReport(id, d, new Date()).size(), 2);
-			s = data.getEmployeeReport(id, d, new Date()).get(1);
+			data.sellCapsules(employeeId, b, 10, true);
+			assertEquals(data.getEmployeeReport(employeeId, d, new Date()).size(), 2);
+			s = data.getEmployeeReport(employeeId, d, new Date()).get(1);
 			assertEquals(" BALANCE Mario Rossi tea 10", s.substring(19, s.length()));
 			
 		} catch (Exception e) {
@@ -422,9 +346,10 @@ public class TestDataImpl {
 	@Test
 	public void testGetEmployeeReport2() {
 		try {
-			data.getEmployeeReport(data.createEmployee("Mario" ,"Rossi"), new Date(new Date().getTime() + (1000 * 60 * 60 * 48)), new Date());
+			data.getEmployeeReport(employeeId, new Date(new Date().getTime() + (1000 * 60 * 60 * 48)), new Date());
 			fail();
 		} catch (DateException e) {
+			assertTrue(true);
 		}
 		catch (EmployeeException e) {
 			fail();
@@ -434,9 +359,10 @@ public class TestDataImpl {
 	@Test
 	public void testGetEmployeeReport3() {
 		try {
-			data.getEmployeeReport(data.createEmployee("Mario" ,"Rossi"), new Date(), null);
+			data.getEmployeeReport(employeeId, new Date(), null);
 			fail();
 		} catch (DateException e) {
+			assertTrue(true);
 		}
 		catch (EmployeeException e) {
 			fail();
@@ -452,66 +378,46 @@ public class TestDataImpl {
 			fail();
 		}
 		catch (EmployeeException e) {
+			assertTrue(true);
 		}
 	}
-	
-	/*
-	 * 	method: getEmployeesId
-	 */
 	
 	@Test
 	public void testGetEmployeesId() {
 		try {
-			assertEquals(0, data.getEmployeesId().size());
-			int id1 = data.createEmployee("Mario" ,"Rossi");
 			assertEquals(1, data.getEmployeesId().size());
-			int id2 = data.createEmployee("Marco", "Bianchi");
+			int idE = data.createEmployee("Marco", "Bianchi");
 			List<Integer> l = data.getEmployeesId();
 			assertEquals(2, l.size());
-			assertTrue(l.contains(id1));
-			assertTrue(l.contains(id2));
+			assertTrue(l.contains(employeeId));
+			assertTrue(l.contains(idE));
 		} catch (EmployeeException e){
 			fail();
 		}
 	}
-	
-	/*
-	 * 	method: getEmployees
-	 */
 	
 	@Test
 	public void testGetEmployees() {
 		try {
-			assertEquals(0, data.getEmployees().size());
-			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployees().size(), 1);
-			int id2 = data.createEmployee("Marco", "Bianchi");
+			assertEquals(1, data.getEmployees().size());
+			int idE = data.createEmployee("Marco", "Bianchi");
 			Map<Integer, String> m = data.getEmployees();
 			assertEquals(2, m.size());
-			assertEquals("Mario Rossi", m.get(id1));
-			assertEquals("Marco Bianchi", m.get(id2));
+			assertEquals("Mario Rossi", m.get(employeeId));
+			assertEquals("Marco Bianchi", m.get(idE));
 		} catch (EmployeeException e){
 			fail();
 		}
 	}
 	
-	/*
-	 * method: createBeverage
-	 */
-	
 	@Test
 	public void testCreateBeverage1() {
-		int id = -1;
 		try {
-			id = data.createBeverage("Coffee", 20, 500);
-		} catch (BeverageException e) {
-			fail();
-		}
-		
-		try {
-			assertEquals("Coffee", data.getBeverageName(id));
-			assertEquals(new Integer(20), data.getBeverageCapsulesPerBox(id));
-			assertEquals(new Integer(500), data.getBeverageBoxPrice(id));
+			data.reset();
+			int idB = data.createBeverage("Coffee", 20, 500);
+			assertEquals("Coffee", data.getBeverageName(idB));
+			assertEquals(Integer.valueOf(20), data.getBeverageCapsulesPerBox(idB));
+			assertEquals(Integer.valueOf(500), data.getBeverageBoxPrice(idB));
 		} catch (BeverageException e) {
 			fail();
 		}
@@ -520,6 +426,7 @@ public class TestDataImpl {
 	@Test
 	public void testCreateBeverage2() {
 		try {
+			data.reset();
 			data.createBeverage("Coffee", 20, -500);
 			fail();
 		} catch (BeverageException e) {
@@ -530,6 +437,7 @@ public class TestDataImpl {
 	@Test
 	public void testCreateBeverage3() {
 		try {
+			data.reset();
 			data.createBeverage("Coffee", -20, 500);
 			fail();
 		} catch (BeverageException e) {
@@ -540,7 +448,6 @@ public class TestDataImpl {
 	@Test
 	public void testCreateBeverage4() {
 		try {
-			data.createBeverage("Coffee", 20, 500);
 			data.createBeverage("Coffee", 25, 600);
 			fail();
 		} catch (BeverageException e) {
@@ -548,21 +455,19 @@ public class TestDataImpl {
 		}
 	}
 	
-	/*
-	 * method: getBeverageBoxPrice
-	 */
-	
+	@Test
 	public void testGetBeverageBoxPrice1() {
 		try {
-			int id = data.createBeverage("Coffee", 20, 500);
-			assertEquals(new Integer(500), data.getBeverageBoxPrice(id));
+			assertEquals(Integer.valueOf(500), data.getBeverageBoxPrice(beverageId));
 		} catch (BeverageException e) {
 			fail();
 		}
 	}
 	
+	@Test
 	public void testGetBeverageBoxPrice2() {
 		try {
+			data.reset();
 			data.getBeverageBoxPrice(1);
 			fail();
 		} catch (BeverageException e) {
@@ -570,13 +475,10 @@ public class TestDataImpl {
 		}
 	}
 	
-	/*
-	 * method: createEmployee
-	 */
-	
 	@Test
 	public void testCreateEmployee1() {
 		try {
+			data.reset();
 			int id = data.createEmployee("Mario", "Rossi");
 			assertEquals("Mario", data.getEmployeeName(id));
 			assertEquals("Rossi", data.getEmployeeSurname(id));
@@ -589,71 +491,45 @@ public class TestDataImpl {
 	public void testCreateEmployee2() {
 		try {
 			data.createEmployee("Mario", "Rossi");
-			data.createEmployee("Mario", "Rossi");
 			fail();
 		} catch (EmployeeException e) {
 			assertTrue(true);
 		}
 	}
 	
-	
-	/*
-	 * method: buyBoxes
-	 */
-	
 	@Test
 	public void testBuyBoxes1() {
-		int idB=-1;
+		data.reset();
 		try {
 			int idE = data.createEmployee("Mario", "Rossi");
-			idB = data.createBeverage("Coffee", 20, 500);
+			int idB = data.createBeverage("Coffee", 20, 500);
 			data.rechargeAccount(idE, 500);
-		} catch (Exception e) {
-			fail("Exception while creating the environment");
-		}
-		
-		try {
 			data.buyBoxes(idB, 1);
-			assertEquals(new Integer(20), data.getBeverageCapsules(idB));
-		} catch (BeverageException | NotEnoughBalance e) {
+			assertEquals(Integer.valueOf(20), data.getBeverageCapsules(idB));
+		} catch (BeverageException | NotEnoughBalance | EmployeeException e) {
 			fail();
 		}
 	}
 	
 	@Test
 	public void testBuyBoxes2() {
-		int idB=-1;
 		try {
-			idB = data.createBeverage("Coffee", 20, 500);
-		} catch (Exception e) {
-			fail("Exception while creating the environment");
-		}
-		
-		try {
-			data.buyBoxes(idB, 1);
+			data.buyBoxes(beverageId, 1);
+			fail();
+		} catch (BeverageException e) {
 			fail();
 		} catch (NotEnoughBalance e) {
 			assertTrue(true);
-		} catch (BeverageException e) {
-			fail();
 		}
 	}
 	
 	@Test
 	public void testBuyBoxes3() {
-		int idB=-1;
 		try {
-			int idE = data.createEmployee("Mario", "Rossi");
-			idB = data.createBeverage("Coffee", 20, 500);
-			data.rechargeAccount(idE, 500);
-		} catch (Exception e) {
-			fail("Exception while creating the environment");
-		}
-		
-		try {
-			data.buyBoxes(idB, -1);
+			data.rechargeAccount(employeeId, 500);
+			data.buyBoxes(beverageId, -1);
 			fail();
-		} catch (NotEnoughBalance e) {
+		} catch (NotEnoughBalance | EmployeeException e) {
 			fail();
 		} catch (BeverageException e) {
 			assertTrue(true);
@@ -663,37 +539,24 @@ public class TestDataImpl {
 	@Test
 	public void testBuyBoxes4() {
 		try {
-			int idE = data.createEmployee("Mario", "Rossi");
-			data.rechargeAccount(idE, 500);
-		} catch (Exception e) {
-			fail("Exception while creating the environment");
-		}
-		
-		try {
-			data.buyBoxes(1, 1);
-			fail();
-		} catch (NotEnoughBalance e) {
+			data.rechargeAccount(employeeId, 500);
+			data.buyBoxes(10, 1);
+		} catch (NotEnoughBalance | EmployeeException e) {
 			fail();
 		} catch (BeverageException e) {
 			assertTrue(true);
 		}
 	}
 	
-	/*
-	 * method: getBalance
-	 */
-	
 	@Test
 	public void testGetBalance1() {
 		try {
-			int idE = data.createEmployee("Mario", "Rossi");
-			int idB = data.createBeverage("Coffee", 20, 500);
-			data.rechargeAccount(idE, 500);
-			assertEquals(new Integer(500), data.getBalance());
-			data.buyBoxes(idB, 1);
-			assertEquals(new Integer(0), data.getBalance());
-			data.sellCapsulesToVisitor(idB, 4);
-			assertEquals(new Integer(100), data.getBalance());
+			data.rechargeAccount(employeeId, 500);
+			assertEquals(Integer.valueOf(500), data.getBalance());
+			data.buyBoxes(beverageId, 1);
+			assertEquals(Integer.valueOf(0), data.getBalance());
+			data.sellCapsulesToVisitor(beverageId, 4);
+			assertEquals(Integer.valueOf(100), data.getBalance());
 		} catch (BeverageException | EmployeeException | NotEnoughBalance | NotEnoughCapsules e) {
 			fail();
 		}
@@ -701,122 +564,100 @@ public class TestDataImpl {
 	
 	@Test
 	public void testGetBalance2() {
-		assertEquals(new Integer(0), data.getBalance());
+		data.reset();
+		assertEquals(Integer.valueOf(0), data.getBalance());
 	}
-	
-	/*
-	 * 	method: rechargeAccount
-	 */
 	
 	@Test
 	public void testRechargeAccount1() {
 		try {
-			assertEquals(data.getEmployees().size(), 0);
-			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
-			data.rechargeAccount(id1, 10);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(10));
-		} catch (Exception e){
+			assertEquals(Integer.valueOf(1000), data.getEmployeeBalance(employeeId));
+			data.rechargeAccount(employeeId, 500);
+			assertEquals(Integer.valueOf(1500), data.getEmployeeBalance(employeeId));
+		} catch (EmployeeException e){
 			fail();
 		}
 	}
-	
-	/*
-	 * 	method: rechargeAccount
-	 */
 	
 	@Test
 	public void testRechargeAccount2() {
 		try {
 			data.rechargeAccount(-1, 10);
 			fail();
-		} catch (Exception e){
+		} catch (EmployeeException e){
+			assertTrue(true);
 		}
 	}
-	
-	/*
-	 * 	method: rechargeAccount
-	 */
 	
 	@Test
 	public void testRechargeAccount3() {
 		try {
-			assertEquals(data.getEmployees().size(), 0);
-			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
-			data.rechargeAccount(id1, -10);
+			assertEquals(Integer.valueOf(1000), data.getEmployeeBalance(employeeId));
+			data.rechargeAccount(employeeId, -10);
 			fail();
 		} catch (EmployeeException e) {
-		} catch (Exception e){
-			fail();
+			assertTrue(true);
 		}
 	}
 	
 	@Test
 	public void tcReset() {
 		try {
-			int id1 = data.createEmployee("Mario", "Rossi");
 			data.createEmployee("Luca", "Sassi");
 			int b1 = data.createBeverage("tea", 50, 1000);
-			data.rechargeAccount(id1, 2000);
+			data.rechargeAccount(employeeId, 2000);
 			data.buyBoxes(b1, 2);
-			data.sellCapsules(id1, b1, 50, true);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(1000));
+			data.sellCapsules(employeeId, b1, 50, true);
+			assertEquals(Integer.valueOf(2000), data.getEmployeeBalance(employeeId));
 			data.reset();
-			assertEquals(data.getEmployees().size(), 0);
-			assertEquals(data.getBeverages().size(), 0);
-			assertEquals(data.getBalance(), new Integer(0));
-		} catch (Exception e) {
+			assertEquals(0, data.getEmployees().size());
+			assertEquals(0, data.getBeverages().size());
+			assertEquals(Integer.valueOf(0), data.getBalance());
+		} catch (EmployeeException | BeverageException | NotEnoughBalance | NotEnoughCapsules e) {
 			fail();
 		}
 	}
 	
-	/*
-	 * 	method: sellCapsules
-	 */
-	
 	@Test
 	public void testSellCapsules1() {
+		data.reset();
 		try {
-			assertEquals(data.getEmployees().size(), 0);
+			assertEquals(0, data.getEmployees().size());
 			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(Integer.valueOf(0), data.getEmployeeBalance(id1));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(Integer.valueOf(2000), data.getEmployeeBalance(id1));
 			int b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
+			assertEquals(1, data.getBeverages().size());
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(Integer.valueOf(100), data.getBeverageCapsules(b1));
 			data.sellCapsules(id1, b1, 50, true);
-			assertEquals(data.getEmployeeBalance(id1),new Integer(1000));
-			assertEquals(data.getBeverageCapsules(b1), new Integer(50));
-			assertEquals(data.getBalance(), new Integer(0));
+			assertEquals(Integer.valueOf(1000), data.getEmployeeBalance(id1));
+			assertEquals(Integer.valueOf(50), data.getBeverageCapsules(b1));
+			assertEquals(Integer.valueOf(0), data.getBalance());
 			data.sellCapsules(id1, b1, 50, false);
-			assertEquals(data.getEmployeeBalance(id1),new Integer(1000));
-			assertEquals(data.getBeverageCapsules(b1), new Integer(0));
-			assertEquals(data.getBalance(), new Integer(1000));
+			assertEquals(Integer.valueOf(1000), data.getEmployeeBalance(id1));
+			assertEquals(Integer.valueOf(0), data.getBeverageCapsules(b1));
+			assertEquals(Integer.valueOf(1000), data.getBalance());
 		} catch (Exception e){
 			fail();
 		}
 	}
 	
-	/*
-	 * 	method: sellCapsules
-	 */
-	
 	@Test
 	public void testSellCapsules2() {
+		data.reset();
 		int id1 = 0, b1 = 0; 
 		try {
-			assertEquals(data.getEmployees().size(), 0);
+			assertEquals(0, data.getEmployees().size());
 			id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(Integer.valueOf(0), data.getEmployeeBalance(id1));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(Integer.valueOf(2000), data.getEmployeeBalance(id1));
 			b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
+			assertEquals(1, data.getBeverages().size());
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(Integer.valueOf(100), data.getBeverageCapsules(b1));
 			data.sellCapsules(id1+1, b1, 50, true);
 			fail();
 		} catch (EmployeeException e){
@@ -832,23 +673,20 @@ public class TestDataImpl {
 		}
 	}
 	
-	/*
-	 * 	method: sellCapsules
-	 */
-	
 	@Test
 	public void testSellCapsules3() {
+		data.reset();
 		int id1 = 0, b1 = 0; 
 		try {
-			assertEquals(data.getEmployees().size(), 0);
+			assertEquals(0, data.getEmployees().size());
 			id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(Integer.valueOf(0), data.getEmployeeBalance(id1));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(Integer.valueOf(2000), data.getEmployeeBalance(id1));
 			b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
+			assertEquals(1, data.getBeverages().size());
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(Integer.valueOf(100), data.getBeverageCapsules(b1));
 			data.sellCapsules(-1, b1, 50, true);
 			fail();
 		} catch (EmployeeException e){
@@ -864,23 +702,20 @@ public class TestDataImpl {
 		}
 	}
 	
-	/*
-	 * 	method: sellCapsules
-	 */
-	
 	@Test
 	public void testSellCapsules4() {
+		data.reset();
 		int id1 = 0, b1 = 0; 
 		try {
-			assertEquals(data.getEmployees().size(), 0);
+			assertEquals(0, data.getEmployees().size());
 			id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(Integer.valueOf(0), data.getEmployeeBalance(id1));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(Integer.valueOf(2000), data.getEmployeeBalance(id1));
 			b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
+			assertEquals(1, data.getBeverages().size());
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(Integer.valueOf(100), data.getBeverageCapsules(b1));
 			data.sellCapsules(id1, b1+1, 50, true);
 			fail();
 		} catch (BeverageException e){
@@ -897,23 +732,20 @@ public class TestDataImpl {
 		}
 	}
 	
-	/*
-	 * 	method: sellCapsules
-	 */
-	
 	@Test
 	public void testSellCapsules5() {
+		data.reset();
 		int id1 = 0, b1 = 0; 
 		try {
-			assertEquals(data.getEmployees().size(), 0);
+			assertEquals(0, data.getEmployees().size());
 			id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(Integer.valueOf(0), data.getEmployeeBalance(id1));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(Integer.valueOf(2000), data.getEmployeeBalance(id1));
 			b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
+			assertEquals(1, data.getBeverages().size());
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(Integer.valueOf(100), data.getBeverageCapsules(b1));
 			data.sellCapsules(id1, -1, 50, true);
 			fail();
 		} catch (BeverageException e){
@@ -930,23 +762,20 @@ public class TestDataImpl {
 		}
 	}
 	
-	/*
-	 * 	method: sellCapsules
-	 */
-	
 	@Test
 	public void testSellCapsules6() {
+		data.reset();
 		int id1 = 0, b1 = 0; 
 		try {
-			assertEquals(data.getEmployees().size(), 0);
+			assertEquals(0, data.getEmployees().size());
 			id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(Integer.valueOf(0), data.getEmployeeBalance(id1));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(Integer.valueOf(2000), data.getEmployeeBalance(id1));
 			b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
+			assertEquals(1, data.getBeverages().size());
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(Integer.valueOf(100), data.getBeverageCapsules(b1));
 			data.sellCapsules(id1, b1, 115, true);
 			fail();
 		} catch (NotEnoughCapsules e){
@@ -963,23 +792,20 @@ public class TestDataImpl {
 		}
 	}
 	
-	/*
-	 * 	method: sellCapsules
-	 */
-	
 	@Test
 	public void testSellCapsules7() {
+		data.reset();
 		int id1 = 0, b1 = 0; 
 		try {
-			assertEquals(data.getEmployees().size(), 0);
+			assertEquals(0, data.getEmployees().size());
 			id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(Integer.valueOf(0), data.getEmployeeBalance(id1));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(Integer.valueOf(2000), data.getEmployeeBalance(id1));
 			b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
+			assertEquals(1, data.getBeverages().size());
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(Integer.valueOf(100), data.getBeverageCapsules(b1));
 			data.sellCapsules(id1, b1, -5, true);
 			fail();
 		} catch (BeverageException e){
@@ -996,46 +822,40 @@ public class TestDataImpl {
 		}
 	}
 	
-	/*
-	 * 	method: sellCapsulesToVisitor
-	 */
-	
 	@Test
 	public void testSellCapsulesToVisitor1() {
+		data.reset();
 		try {
-			assertEquals(data.getEmployees().size(), 0);
+			assertEquals(0, data.getEmployees().size());
 			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(Integer.valueOf(0), data.getEmployeeBalance(id1));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(Integer.valueOf(2000), data.getEmployeeBalance(id1));
 			int b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
+			assertEquals(1, data.getBeverages().size());
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(Integer.valueOf(100), data.getBeverageCapsules(b1));
 			data.sellCapsulesToVisitor(b1, 50);
-			assertEquals(data.getBalance(), new Integer(1000));
-			assertEquals(data.getBeverageCapsules(b1), new Integer(50));
+			assertEquals(Integer.valueOf(1000), data.getBalance());
+			assertEquals(Integer.valueOf(50), data.getBeverageCapsules(b1));
 		} catch (Exception e){
 			fail();
 		}
 	}
 	
-	/*
-	 * 	method: sellCapsulesToVisitor
-	 */
-	
 	@Test
 	public void testSellCapsulesToVisitor2() {
+		data.reset();
 		try {
-			assertEquals(data.getEmployees().size(), 0);
+			assertEquals(0, data.getEmployees().size());
 			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(Integer.valueOf(0), data.getEmployeeBalance(id1));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(Integer.valueOf(2000), data.getEmployeeBalance(id1));
 			int b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
+			assertEquals(1, data.getBeverages().size());
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(Integer.valueOf(100), data.getBeverageCapsules(b1));
 			data.sellCapsulesToVisitor(b1+1, 50);
 			fail();
 		} catch (BeverageException e){
@@ -1044,22 +864,19 @@ public class TestDataImpl {
 		}
 	}
 	
-	/*
-	 * 	method: sellCapsulesToVisitor
-	 */
-	
 	@Test
 	public void testSellCapsulesToVisitor3() {
+		data.reset();
 		try {
-			assertEquals(data.getEmployees().size(), 0);
+			assertEquals(0, data.getEmployees().size());
 			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(Integer.valueOf(0), data.getEmployeeBalance(id1));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(Integer.valueOf(2000), data.getEmployeeBalance(id1));
 			int b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
+			assertEquals(1, data.getBeverages().size());
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(Integer.valueOf(100), data.getBeverageCapsules(b1));
 			data.sellCapsulesToVisitor(-1, 50);
 			fail();
 		} catch (BeverageException e){
@@ -1068,22 +885,19 @@ public class TestDataImpl {
 		}
 	}
 	
-	/*
-	 * 	method: sellCapsulesToVisitor
-	 */
-	
 	@Test
 	public void testSellCapsulesToVisitor4() {
+		data.reset();
 		try {
-			assertEquals(data.getEmployees().size(), 0);
+			assertEquals(0, data.getEmployees().size());
 			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(Integer.valueOf(0), data.getEmployeeBalance(id1));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(Integer.valueOf(2000), data.getEmployeeBalance(id1));
 			int b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
+			assertEquals(1, data.getBeverages().size());
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(Integer.valueOf(100), data.getBeverageCapsules(b1));
 			data.sellCapsulesToVisitor(b1, 115);
 			fail();
 		} catch (NotEnoughCapsules e){
@@ -1092,22 +906,19 @@ public class TestDataImpl {
 		}
 	}
 	
-	/*
-	 * 	method: sellCapsulesToVisitor
-	 */
-	
 	@Test
 	public void testSellCapsulesToVisitor5() {
+		data.reset();
 		try {
-			assertEquals(data.getEmployees().size(), 0);
+			assertEquals(0, data.getEmployees().size());
 			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(Integer.valueOf(0), data.getEmployeeBalance(id1));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(Integer.valueOf(2000), data.getEmployeeBalance(id1));
 			int b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
+			assertEquals(1, data.getBeverages().size());
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(Integer.valueOf(100), data.getBeverageCapsules(b1));
 			data.sellCapsulesToVisitor(b1, -5);
 			fail();
 		} catch (BeverageException e){
@@ -1116,203 +927,128 @@ public class TestDataImpl {
 		}
 	}
 	
-	/*
-	 * 	method: updateBeverage
-	 */
-	
 	@Test
 	public void testUpdateBeverage1() {
 		try {
-			assertEquals(data.getBeverages().size(), 0);
 			int b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
-			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
-			data.rechargeAccount(id1, 2000);
+			data.rechargeAccount(employeeId, 2000);
 			data.buyBoxes(b1, 1);
 			data.updateBeverage(b1, "lemon tea", 60, 1250);
-			assertEquals(data.getBeverages().size(), 1);
-			assertEquals(data.getBeverageName(b1), "lemon tea");
-			assertEquals(data.getBeverageBoxPrice(b1), new Integer(1250));
-			assertEquals(data.getBeverageCapsulesPerBox(b1), new Integer(60));
-			assertEquals(data.getBeverageCapsules(b1), new Integer(50));
+			assertEquals(2, data.getBeverages().size());
+			assertEquals("lemon tea", data.getBeverageName(b1));
+			assertEquals(Integer.valueOf(1250), data.getBeverageBoxPrice(b1));
+			assertEquals(Integer.valueOf(60), data.getBeverageCapsulesPerBox(b1));
+			assertEquals(Integer.valueOf(50), data.getBeverageCapsules(b1));
 		} catch (Exception e) {
 			fail();
 		}
 	}
-	
-	/*
-	 * 	method: updateBeverage
-	 */
 	
 	@Test
 	public void testUpdateBeverage2() {
 		int b1 = 0;
 		try {
-			assertEquals(data.getBeverages().size(), 0);
 			b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
-			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
-			data.rechargeAccount(id1, 2000);
+			assertEquals(2, data.getBeverages().size());
+			data.rechargeAccount(employeeId, 2000);
 			data.buyBoxes(b1, 1);
 			data.updateBeverage(b1+1, "lemon tea", 60, 1250);
 			fail();
 		} catch (BeverageException e) {
-			assertEquals(data.getBeverages().size(), 1);
-			try {
-				assertEquals(data.getBeverageName(b1), "tea");
-				assertEquals(data.getBeverageBoxPrice(b1), new Integer(1000));
-				assertEquals(data.getBeverageCapsulesPerBox(b1), new Integer(50));
-				assertEquals(data.getBeverageCapsules(b1), new Integer(50));
-			} catch (BeverageException e1) {
-				fail();
-			}
+			assertTrue(true);
 		} catch (Exception e) {
 			fail();
 		}
 	}
-	
-	/*
-	 * 	method: updateBeverage
-	 */
 	
 	@Test
 	public void testUpdateBeverage3() {
 		int b1 = 0;
 		try {
-			assertEquals(data.getBeverages().size(), 0);
 			b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
-			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
-			data.rechargeAccount(id1, 2000);
+			assertEquals(2, data.getBeverages().size());
+			data.rechargeAccount(employeeId, 2000);
 			data.buyBoxes(b1, 1);
 			data.updateBeverage(-1, "lemon tea", 60, 1250);
 			fail();
 		} catch (BeverageException e) {
-			assertEquals(data.getBeverages().size(), 1);
-			try {
-				assertEquals(data.getBeverageName(b1), "tea");
-				assertEquals(data.getBeverageBoxPrice(b1), new Integer(1000));
-				assertEquals(data.getBeverageCapsulesPerBox(b1), new Integer(50));
-				assertEquals(data.getBeverageCapsules(b1), new Integer(50));
-			} catch (BeverageException e1) {
-				fail();
-			}
+			assertTrue(true);
 		} catch (Exception e) {
 			fail();
 		}
 	}
-	
-	/*
-	 * 	method: updateBeverage
-	 */
 	
 	@Test
 	public void testUpdateBeverage4() {
 		int b1 = 0;
 		try {
-			assertEquals(data.getBeverages().size(), 0);
 			b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
-			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
-			data.rechargeAccount(id1, 2000);
+			assertEquals(2, data.getBeverages().size());
+			data.rechargeAccount(employeeId, 2000);
 			data.buyBoxes(b1, 1);
 			data.updateBeverage(b1, "lemon tea", -5, 1250);
 			fail();
 		} catch (BeverageException e) {
-			assertEquals(data.getBeverages().size(), 1);
-			try {
-				assertEquals(data.getBeverageName(b1), "tea");
-				assertEquals(data.getBeverageBoxPrice(b1), new Integer(1000));
-				assertEquals(data.getBeverageCapsulesPerBox(b1), new Integer(50));
-				assertEquals(data.getBeverageCapsules(b1), new Integer(50));
-			} catch (BeverageException e1) {
-				fail();
-			}
+			assertTrue(true);
 		} catch (Exception e) {
 			fail();
 		}
 	}
-	
-	/*
-	 * 	method: updateBeverage
-	 */
 	
 	@Test
 	public void testUpdateBeverage5() {
 		int b1 = 0;
 		try {
-			assertEquals(data.getBeverages().size(), 0);
 			b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
-			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
-			data.rechargeAccount(id1, 2000);
+			assertEquals(2, data.getBeverages().size());
+			data.rechargeAccount(employeeId, 2000);
 			data.buyBoxes(b1, 1);
 			data.updateBeverage(b1+1, "lemon tea", 60, -1000);
 			fail();
 		} catch (BeverageException e) {
-			assertEquals(data.getBeverages().size(), 1);
-			try {
-				assertEquals(data.getBeverageName(b1), "tea");
-				assertEquals(data.getBeverageBoxPrice(b1), new Integer(1000));
-				assertEquals(data.getBeverageCapsulesPerBox(b1), new Integer(50));
-				assertEquals(data.getBeverageCapsules(b1), new Integer(50));
-			} catch (BeverageException e1) {
-				fail();
-			}
+			assertTrue(true);
 		} catch (Exception e) {
 			fail();
 		}
 	}
-
-	
-	/*
-	 * 	method: updateEmployee
-	 */
 	
 	@Test
 	public void testUpdateEmployee1() {
+		data.reset();
 		try {
-			assertEquals(data.getEmployees().size(), 0);
+			assertEquals(0, data.getEmployees().size());
 			int id1 = data.createEmployee("Mario", "Rossi");
-			assertEquals(data.getEmployees().size(), 1);
+			assertEquals(1, data.getEmployees().size());
 			data.rechargeAccount(id1, 1000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(1000));
+			assertEquals(Integer.valueOf(1000), data.getEmployeeBalance(id1));
 			data.updateEmployee(id1, "Michele", "Suria");
-			assertEquals(data.getEmployees().size(), 1);
-			assertEquals(data.getEmployeeName(id1), "Michele");
-			assertEquals(data.getEmployeeSurname(id1), "Suria");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(1000));
+			assertEquals(1, data.getEmployees().size());
+			assertEquals("Michele", data.getEmployeeName(id1));
+			assertEquals("Suria", data.getEmployeeSurname(id1));
+			assertEquals(Integer.valueOf(1000), data.getEmployeeBalance(id1));
 		} catch (Exception e) {
 			fail();
 		}
 	}
-	
-	/*
-	 * 	method: updateEmployee
-	 */
 	
 	@Test
 	public void testUpdateEmployee2() {
+		data.reset();
 		int id1 = 0;
 		try {
-			assertEquals(data.getEmployees().size(), 0);
+			assertEquals(0, data.getEmployees().size());
 			id1 = data.createEmployee("Mario", "Rossi");
-			assertEquals(data.getEmployees().size(), 1);
+			assertEquals(1, data.getEmployees().size());
 			data.rechargeAccount(id1, 1000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(1000));
+			assertEquals(Integer.valueOf(1000), data.getEmployeeBalance(id1));
 			data.updateEmployee(id1+1, "Michele", "Suria");
 			fail();
 		} catch (EmployeeException e) {
-			assertEquals(data.getEmployees().size(), 1);
+			assertEquals(1, data.getEmployees().size());
 			try {
-				assertEquals(data.getEmployeeName(id1), "Mario");
-				assertEquals(data.getEmployeeSurname(id1), "Rossi");
-				assertEquals(data.getEmployeeBalance(id1), new Integer(1000));
+				assertEquals("Mario", data.getEmployeeName(id1));
+				assertEquals("Rossi", data.getEmployeeSurname(id1));
+				assertEquals(Integer.valueOf(1000), data.getEmployeeBalance(id1));
 			} catch (EmployeeException e1) {
 				fail();
 			}
@@ -1320,28 +1056,25 @@ public class TestDataImpl {
 			fail();
 		}
 	}
-	
-	/*
-	 * 	method: updateEmployee
-	 */
 	
 	@Test
 	public void testUpdateEmployee3() {
+		data.reset();
 		int id1 = 0;
 		try {
-			assertEquals(data.getEmployees().size(), 0);
+			assertEquals(0, data.getEmployees().size());
 			id1 = data.createEmployee("Mario", "Rossi");
-			assertEquals(data.getEmployees().size(), 1);
+			assertEquals(1, data.getEmployees().size());
 			data.rechargeAccount(id1, 1000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(1000));
+			assertEquals(Integer.valueOf(1000), data.getEmployeeBalance(id1));
 			data.updateEmployee(-1, "Michele", "Suria");
 			fail();
 		} catch (EmployeeException e) {
-			assertEquals(data.getEmployees().size(), 1);
+			assertEquals(1, data.getEmployees().size());
 			try {
-				assertEquals(data.getEmployeeName(id1), "Mario");
-				assertEquals(data.getEmployeeSurname(id1), "Rossi");
-				assertEquals(data.getEmployeeBalance(id1), new Integer(1000));
+				assertEquals("Mario", data.getEmployeeName(id1));
+				assertEquals("Rossi", data.getEmployeeSurname(id1));
+				assertEquals(Integer.valueOf(1000), data.getEmployeeBalance(id1));
 			} catch (EmployeeException e1) {
 				fail();
 			}
@@ -1352,31 +1085,218 @@ public class TestDataImpl {
 	
 	
 	/*
-	 *****************
-	 *** White box ***
-	 *****************
+	 * White box
 	 */
 	
-	public void testDataPersistency() {
-		int idB=-1, idE=-1;
+	@Test
+	// > 1 iterations for loop coverage
+	public void testGetBeveragesId3() {
 		try {
-			idB = data.createBeverage("Coffee", 20, 500);
-			idE = data.createEmployee("Mario", "Rossi");
-			data.rechargeAccount(idE, 700);
-			data.buyBoxes(idB, 1);
-			data.sellCapsules(idE, idB, 4, true);
-		} catch (Exception e) {
-			fail("Exception while creating the environment");
+			int idB = data.createBeverage("Tea", 25, 400);
+			List<Integer> beverages = data.getBeveragesId();
+			assertTrue(beverages.size() == 2);
+			assertTrue(beverages.contains(beverageId));
+			assertTrue(beverages.contains(idB));
+		} catch (BeverageException e) {
+			fail();
 		}
-		
+	}
+	
+	@Test
+	// > 1 iterations for loop coverage
+	public void testGetBeverages3() {
 		try {
+			int idB = data.createBeverage("Tea", 25, 400);
+			Map<Integer, String> beverages = data.getBeverages();
+			assertTrue(beverages.size() == 2);
+			assertNotNull(beverages.get(beverageId));
+			assertNotNull(beverages.get(idB));
+			assertTrue(beverages.get(beverageId).equals("Coffee"));
+			assertTrue(beverages.get(idB).equals("Tea"));
+		} catch (BeverageException e) {
+			fail();
+		}
+	}
+	
+	@Test
+	public void testDataPersistency() {
+		try {
+			data.sellCapsules(employeeId, beverageId, 4, true);
+			data.sellCapsulesToVisitor(beverageId, 4);
 			data = new DataImpl();	// simulate restart of the application
-			assertEquals(new Integer(200), data.getBalance());
-			assertEquals(new Integer(600), data.getEmployeeBalance(idE));
-			assertEquals(new Integer(15), data.getBeverageCapsules(idB));
-			assertEquals("Mario Rossi", data.getEmployeeName(idE) + " " + data.getEmployeeSurname(idE));
-			assertEquals("Coffee", data.getBeverageName(idB));
+			assertEquals(Integer.valueOf(100), data.getBalance());
+			assertEquals(Integer.valueOf(900), data.getEmployeeBalance(employeeId));
+			assertEquals(Integer.valueOf(32), data.getBeverageCapsules(beverageId));
+			assertEquals("Mario Rossi", data.getEmployeeName(employeeId) + " " + data.getEmployeeSurname(employeeId));
+			assertEquals("Coffee", data.getBeverageName(beverageId));
 		} catch (Exception e) {
+			fail();
+		}
+	}
+	
+	
+	/*
+	 * Acceptance testing
+	 * 
+	 * Some of the previous ones are also acceptance test cases.
+	 * The following ones are added to cover all functional and non-functional requirements.
+	 * See acceptance_test_document.md for more info.
+	 */
+	
+	@Test
+	public void testScenario2() {
+		data.reset();
+		try {
+			int employeeId = data.createEmployee("Mario", "Rossi");
+			int beverageId = data.createBeverage("Coffee", 20, 500);
+			
+			// recharge balance of another employee to increase the amount of LaTazza, allowing to buy new boxes
+			int id = data.createEmployee("John", "Doe");
+			data.rechargeAccount(id, 10000);
+			data.buyBoxes(beverageId, 1);
+			
+			data.sellCapsules(employeeId, beverageId, 1, true);
+			int balance = data.getEmployeeBalance(employeeId);
+			// employee balance (previously 0) is now negative
+			assertEquals(-25, balance);
+		} catch (EmployeeException e) {
+			fail();
+		} catch (BeverageException e) {
+			fail();
+		} catch (NotEnoughCapsules e) {
+			fail();
+		} catch (NotEnoughBalance e) {
+			fail();
+		}
+	}
+	
+	@Test
+	public void testScenario6() {
+		data.reset();
+		try {
+			int employeeId = data.createEmployee("Mario", "Rossi");
+			
+			assertEquals("Mario", data.getEmployeeName(employeeId));
+			assertEquals("Rossi", data.getEmployeeSurname(employeeId));
+			assertEquals(Integer.valueOf(0), data.getEmployeeBalance(employeeId));
+			assertEquals(1, data.getEmployees().size());
+			assertTrue(data.getEmployees().containsKey(employeeId));
+			assertTrue(data.getEmployees().containsValue("Mario Rossi"));
+			assertEquals(1, data.getEmployeesId().size());
+			assertTrue(data.getEmployeesId().contains(employeeId));
+	
+			Date d = new Date();
+			data.rechargeAccount(employeeId, 500);
+			List<String> rechargeReport = data.getEmployeeReport(employeeId, d, new Date());
+			assertEquals(1, rechargeReport.size());
+			
+				
+			SimpleDateFormat format = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+			String expected = format.format(d) + " RECHARGE Mario Rossi " + String.format("%.2f", 5.0) + "€";
+			assertEquals(expected, rechargeReport.get(0));
+		} catch (EmployeeException e) {
+			fail();
+		} catch (DateException e) {
+			fail();
+		}
+	}
+	
+	@Test
+	public void testScenario7() {
+		data.reset();
+		try {
+			int id = data.createEmployee("Mario", "Rossi");
+			data.rechargeAccount(id, 1);
+			int b = data.createBeverage("Coffee", 1, 1);
+			assertEquals("Coffee", data.getBeverageName(b));
+			data.buyBoxes(b, 1);
+			assertEquals(Integer.valueOf(0), data.getBalance());
+		} catch (Exception e) {
+			fail();
+		}
+	}
+	
+	@Test
+	public void testPerformance() {
+		data.reset();
+		try {
+			final int n = 100;
+			long begin, end;
+			int[] idE = new int[n], idB = new int[n];
+			Date startDate=new Date(), endDate;
+			
+			/* FR7 - create */
+			begin = System.currentTimeMillis();  
+			for (int i=0; i<n; i++)
+				idB[i] = data.createBeverage("Coffe" + i, 2, 50);
+			end = System.currentTimeMillis();
+			assertTrue((end-begin)/((double) n) < 500);
+			
+			/* FR7 - update */
+			begin = System.currentTimeMillis(); 
+			for (int i=0; i<n; i++)
+				data.updateBeverage(idB[i], "Coffee"+i, 20, 500);
+			end = System.currentTimeMillis();
+			assertTrue((end-begin)/((double) n) < 500);
+			
+			/* FR8 - create */
+			begin = System.currentTimeMillis();
+			for (int i=0; i<n; i++)
+				idE[i] = data.createEmployee("Mari"+i, "Rosi"+i);
+			end = System.currentTimeMillis();
+			assertTrue((end-begin)/((double) n) < 500);
+			
+			/* FR8 - update */
+			begin = System.currentTimeMillis();  
+			for (int i=0; i<n; i++)
+				data.updateEmployee(idE[i], "Mario"+i, "Rossi"+i);
+			end = System.currentTimeMillis();
+			assertTrue((end-begin)/((double) n) < 500);
+			
+			/* FR3 */
+			begin = System.currentTimeMillis();
+			for (int i=0; i<n; i++)
+				data.rechargeAccount(idE[i], 10000);
+			end = System.currentTimeMillis();
+			assertTrue((end-begin)/((double) n) < 500);
+			
+			/* FR4 */
+			begin = System.currentTimeMillis();
+			for (int i=0; i<n; i++)
+				data.buyBoxes(idB[i], 20);
+			end = System.currentTimeMillis();
+			assertTrue((end-begin)/((double) n) < 500);
+			
+			/* FR1 */
+			begin = System.currentTimeMillis();
+			for (int i=0; i<n; i++)
+				data.sellCapsules(idE[i], idB[i], 2, true);
+			end = System.currentTimeMillis();
+			assertTrue((end-begin)/((double) n) < 500);
+			
+			/* FR2 */
+			begin = System.currentTimeMillis();
+			for (int i=0; i<n; i++)
+				data.sellCapsulesToVisitor(idB[i], 2);
+			end = System.currentTimeMillis();
+			assertTrue((end-begin)/((double) n) < 500);
+			
+			/* FR5 */
+			endDate = new Date();
+			begin = System.currentTimeMillis();
+			for (int i=0; i<n; i++)
+				data.getEmployeeReport(idE[i], startDate, endDate);
+			end = System.currentTimeMillis();
+			assertTrue((end-begin)/((double) n) < 500);
+			
+			/* FR6 */
+			begin = System.currentTimeMillis();
+			for (int i=0; i<n; i++)
+				data.getReport(startDate, endDate);
+			end = System.currentTimeMillis();
+			assertTrue((end-begin)/((double) n) < 500);
+			
+		} catch (EmployeeException | BeverageException | NotEnoughCapsules | NotEnoughBalance | DateException e) {
 			fail();
 		}
 	}
